# ChangeLog for dev-ruby/color-tools
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/color-tools/ChangeLog,v 1.15 2011/07/23 14:20:52 xarthisius Exp $

  23 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  color-tools-1.3.0-r1.ebuild:
  ppc64 stable wrt #375785

*color-tools-1.3.0-r1 (14 Jun 2010)

  14 Jun 2010; Hans de Graaff <graaff@gentoo.org>
  +color-tools-1.3.0-r1.ebuild:
  Convert to ruby-fakegem.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  color-tools-1.3.0.ebuild:
  Various cleanups.

  20 Dec 2009; Hans de Graaff <graaff@gentoo.org> color-tools-1.3.0.ebuild:
  Remove obsolete virtual/ruby dependency.

  11 Apr 2008; Santiago M. Mola <coldwind@gentoo.org>
  color-tools-1.3.0.ebuild:
  amd64 stable

  06 Mar 2007; Tom Gall <tgall@gentoo.org> color-tools-1.3.0.ebuild:
  added ~ppc64

  28 Jan 2007; Marius Mauch <genone@gentoo.org> color-tools-1.3.0.ebuild:
  Replacing einfo with elog

  11 Nov 2006; Piotr Jaroszyński <peper@gentoo.org>
  color-tools-1.3.0.ebuild:
  Add ~amd64 wrt bug #154623.

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> color-tools-1.3.0.ebuild:
  Mark 1.3.0 stable on ia64

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> color-tools-1.3.0.ebuild:
  Mark 1.3.0 ~ia64

  12 Nov 2005; Michael Kohl <citizen428@gentoo.org>
  -color-tools-1.2.0.ebuild:
  Cleaned out old version in relation to bug #103192

  11 Oct 2005; Andrej Kacian <ticho@gentoo.org> color-tools-1.2.0.ebuild,
  color-tools-1.3.0.ebuild:
  Stable on x86, bug #108481.

*color-tools-1.3.0 (25 Aug 2005)

  25 Aug 2005; Michael Kohl <citizen428@gentoo.org>
  +color-tools-1.3.0.ebuild:
  Version bump.

*color-tools-1.2.0 (15 Aug 2005)

  15 Aug 2005; Michael Kohl <citizen428@gentoo.org> +metadata.xml,
  +color-tools-1.2.0.ebuild:
  Initial import. Ebuild submitted by Mathias Gumz <akira@fluxbox.org> in bug
  #100546
