@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/color-tools
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/color-tools/ChangeLog,v 1.15 2011/07/23 14:20:52 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/color-tools/ChangeLog,v 1.16 2011/07/24 06:36:34 graaff Exp $
+
+  24 Jul 2011; Hans de Graaff <graaff@gentoo.org> color-tools-1.3.0-r1.ebuild:
+  Remove unneeded dependency, bug 375787.
 
   23 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
   color-tools-1.3.0-r1.ebuild:
